[project]
name = "lang-graph"
version = "0.1.0"
description = "AI agent workflows with LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langgraph-cli[inmem]>=0.4.19",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.19",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]